--- a/_posts/2022-02-08-nat.md
+++ b/_posts/2022-02-08-nat.md
@@ -7,9 +7,10 @@ tags: [redes locales, smr, teoría]
 
 ## Aviso
 
-En la Sección 6.9 del libro está muy bien explicado.
+En la Sección 6.9 del libro está muy bien explicado. Va bien para entender un NAT a nivel general.
 
-## Introducción
+{:.section}
+## Características de un NAT
 
 Como sabes, no hay suficientes direcciones IPv4 públicas para asignar una dirección única a cada dispositivo conectado a Internet. Las redes suelen implementarse mediante el uso de direcciones IPv4 privadas, según se definen en RFC 1918. El rango de direcciones incluido en RFC 1918 se incluye en la siguiente tabla. Es muy probable que la computadora que utilizas para ver este curso tenga asignada una dirección privada.
 
@@ -26,11 +27,10 @@ NAT proporciona la traducción de direcciones privadas a direcciones públicas, 
 ![Traducción de direcciones privadas a públicas](/assets/img/nat/Traduccion-de-direcciones-privadas-a-publicas.png)
 _Traducción de direcciones privadas a públicas_
 
-
 Sin NAT, el agotamiento del espacio de direcciones IPv4 habría ocurrido mucho antes del año 2000. Sin embargo, NAT tiene limitaciones y desventajas, que se explorarán más adelante en este módulo. La solución al agotamiento del espacio de direcciones IPv4 y a las limitaciones de NAT es la transición final a IPv6.
 
-
-## ¿Cómo funciona un NAT?
+{:.subsection}
+### ¿Cómo funciona un NAT?
 
 La traducción de estas direcciones de red (NAT) es un mecanismo que permite a varias máquinas de una LAN con direcciones privadas para que puedan acceder a una red externa, por ejemplo Internet, con una IP pública. Esta traducción de direcciones también es llamada **enmascaramiento IP**.
 
@@ -41,11 +41,44 @@ Para que sea posible hacer esa traducción de direcciones ha de haber un disposi
 ![Funcionamiento de un NAT](/assets/img/nat/Como-Funciona-NAT.gif)
 _Funcionamiento de un NAT_
 
-## Terminología NAT
+{:.subsection}
+### Terminología NAT
 
+Cuando se usa NAT, las direcciones IPv4 tienen diferentes designaciones en función de si están en la red privada o en la red pública (internet), y si el tráfico es entrante o saliente.
 
+NAT incluye cuatro tipos de direcciones:
 
+- Dirección local interna
+- Dirección global interna
+- Dirección local externa
+- Dirección global externa
 
+Al determinar qué tipo de dirección se utiliza, es importante recordar que la terminología de NAT siempre se aplica desde la perspectiva del dispositivo con la dirección traducida:
+
+- **Dirección interna**: La dirección del dispositivo que NAT está traduciendo.
+- **Dirección externa**: La dirección del dispositivo de destino.
+
+NAT también usa los conceptos de local o global con relación a las direcciones:
+
+- **Dirección local**: Una dirección local es cualquier dirección que aparece en la parte interna de la red.
+- **Dirección global**: Una dirección global es cualquier dirección que aparece en la parte externa de la red.
+
+Los términos «interna» y «externa» se combinan con los términos «global» y «local» para hacer referencia a direcciones específicas. El router NAT, R2 en la figura, es el punto de demarcación entre las redes internas y externas. R2 está configurado con un pool de direcciones públicas para asignar a los hosts internos. Consulta la tabla de red y NAT de la figura para obtener la siguiente explicación de cada uno de los tipos de direcciones NAT.
+
+![Funcionamiento de un NAT](/assets/img/nat/Terminologia-de-NAT.png)
+_Terminología de NAT_
+
+PC1 tiene una dirección local interna de 192.168.10.10. Desde la perspectiva de la PC1, el servidor web tiene la dirección externa 209.165.201.1. Cuando se envían los paquetes de la PC1 a la dirección global del servidor web, la dirección local interna de la PC1 se traduce al 209.165.200.226 (dirección global interna). La dirección del dispositivo externo generalmente no se traduce porque esa dirección suele ser una dirección IPv4 pública.
+
+Observa que la PC1 tiene distintas direcciones locales y globales, mientras que el servidor web tiene la misma dirección IPv4 pública en ambos casos. Desde la perspectiva del servidor web, el tráfico que se origina en la PC1 parece provenir de 209.165.200.226, la dirección global interna.
+
+{:.question}
+¿Qué es un NAT?
+
+{:.question}
+¿Es lo mismo NAT que enmascaramiento IP?
+
+{:.section}
 ## Tipos de NAT
 
 Existen 3 tipos de NAT:
@@ -54,6 +87,7 @@ Existen 3 tipos de NAT:
 - NAT dinámico
 - PAT
 
+{:.subsection}
 ### NAT estático
 
 Todos los paquetes tienen la misma IP privada y el mismo puerto interno son mapeados siempre a la misma dirección IP pública y al mismo puerto externo. Cualquier máquina externa puede enviar un paquete a la máquina interna indicando la dirección y el puerto externo que ha sido mapeado.
@@ -62,15 +96,51 @@ Se trata del típico caso en el que necesitamos publicar un servicio de la red i
 
 La conversión de direcciones de red (NAT) estática, o de correlación, proporciona una correspondencia biunívoca entre direcciones IP privadas y direcciones IP públicas. Permite correlacionar una dirección IP de la red interna con una dirección IP que se desea hacer pública.
 
+![NAT Estático](/assets/img/nat/NAT-Estatico.png)
+_NAT Estático_
+
+⚠️ La NAT estática requiere que haya suficientes direcciones públicas disponibles para satisfacer la cantidad total de sesiones de usuario simultáneas.
+
+{:.subsection}
 ### NAT dinámico
 
+La NAT dinámica utiliza un pool de direcciones públicas y las asigna según el orden de llegada. Cuando un dispositivo interno solicita acceso a una red externa, la NAT dinámica asigna una dirección IPv4 pública disponible del pool.
 
+En la figura, PC3 ha accedido a Internet utilizando la primera dirección disponible en el pool NAT dinámico. Las demás direcciones siguen disponibles para utilizarlas. Al igual que la NAT estática, la NAT dinámica requiere que haya suficientes direcciones públicas disponibles para satisfacer la cantidad total de sesiones de usuario simultáneas.
 
+![NAT Estático](/assets/img/nat/NAT-Dinamica.png)
+_NAT dinámico_
+
+{:.subsection}
 ### PAT
 
+La traducción de la dirección del puerto (PAT, Port Address Translation), también conocida como «NAT con sobrecarga», asigna varias direcciones IPv4 privadas a una única dirección IPv4 pública o a algunas direcciones. Esto es lo que hacen la mayoría de los routers domésticos. El ISP asigna una dirección al router, sin embargo, varios miembros del hogar pueden acceder simultáneamente a Internet. Esta es la forma más común de NAT tanto para el hogar como para la empresa.
 
+Con PAT, se pueden asignar varias direcciones a una o más direcciones, debido a que cada dirección privada también se rastrea con un número de puerto. Cuando un dispositivo inicia una sesión TCP / IP, genera un valor de puerto de origen TCP o UDP, o un ID de consulta especialmente asignado para ICMP, para identificar de forma única la sesión. Cuando el router NAT recibe un paquete del cliente, utiliza su número de puerto de origen para identificar de forma exclusiva la traducción NAT específica.
 
-## Ejemplo de funcionamiento NAT
+{:.question}
+¿Puede usarse globalmente el mismo puerto? ¿E internamente?
+
+![Proceso de PAT](/assets/img/nat/Proceso-de-PAT.gifg)
+_Proceso de PAT_
+
+A medida que el R2 procesa cada paquete, utiliza un número de puerto (1331 y 1555, en este ejemplo) para identificar el dispositivo en el que se originó el paquete. La dirección de origen (SA, source address) es la dirección local interna con el número de puerto asignado TCP / UDP agregado. La dirección de destino (DA, destination address) es la dirección global externa con el número de puerto de servicio agregado. En este ejemplo, el puerto de servicio es 80, que es HTTP.
+
+{:.question}
+¿Qué diferencias hay entre un NAT y un PAT?
+
+{:.question}
+¿Es lo mismo PAT que NAT con sobrecarga?
+
+{:.subsubsection}
+#### Siguiente puerto disponible
+
+En el ejemplo anterior, los números de puerto del cliente, 1331 y 1555, no se modificaron en el router con NAT habilitada. Esta no es una situación muy probable, porque existe una gran posibilidad de que estos números de puerto ya se hayan conectado a otras sesiones activas.
+
+PAT intenta conservar el puerto de origen inicial. Sin embargo, si el puerto de origen original ya está en uso, PAT asigna el primer número de puerto disponible a partir del comienzo del grupo de puertos apropiado 0-511, 512-1,023 o 1,024-65,535.
+
+{:.subsubsection}
+#### (Opcional) Ejemplo de funcionamiento PAT
 
 Supongamos que tenemos un host, que llamaremos CLIENTE y que tiene por dirección IP 10.1.1.5 y máscara de toda la red 255.0.0.0, que quiere acceder a Internet solicitando páginas a través de su navegador. La conexión a Internet se ha realizado en otro host de la red al que llamaremos SERVIDOR con dirección IP 10.1.1.1 y que está en la misma subred que CLIENTE. 
 
@@ -81,24 +151,23 @@ Debemos tener en cuenta que los pasos 1 y 4 se producen dentro de una LAN, mient
 ![img-description](/assets/img/nat/ejemploNat.png)
 _Esquema de un ejemplo de utilización de enmascaramiento IP_
 
-En CLIENTE, configuramos TCP/P para que la ruta por defecto apunte a SERVIDOR. Por otra parte, por ejemplo, el navegador pediría datos utilizando un puerto que el servidor que le brinde las páginas aprovechará para enviárselas con la seguridad de que el navegador se quedó escuchando por ese puerto. 
+En CLIENTE, configuramos TCP/IP para que la ruta por defecto apunte a SERVIDOR. Por otra parte, por ejemplo, el navegador pediría datos utilizando un puerto que el servidor que le brinde las páginas aprovechará para enviárselas con la seguridad de que el navegador se quedó escuchando por ese puerto. 
 
-Si el navegador en CLIENTE solicita una página al servidor 225.10.2.150 por el puerto 1345, como CLIENTE no tiene acceso por red al host 225.10.2.150, mandará el men saje por la ruta de defecto a SERVIDOR. Si SERVIDOR tiene habilitado el servicio de enmascaramiento, sustituirá la dirección IP de CLIENTE por la suya propia en la interfaz WAN (213.97.2.12) y el número de puerto por otro que tenga libre, haciéndole la petición al servidor web de dirección 225.10.2.150. Cuando el servidor web le conteste, SERVIDOR sustituirá la dirección IP WAN suya (213.97.2.12) por la dirección IP propia en su red de área local (10.1.1.1) y se lo mandará a CLIENTE por el puerto por el que este se quedó esperando, en nuestro ejemplo, el 1345. De este modo, CLIENTE ha recibido sus datos transparentemente.
-
-
-
-## Preguntas
-
-- ¿Qué es un NAT?
-- ¿Es lo mismo NAT que enmascaramiento IP?
-- ¿Qué diferencias hay entre las funciones de un NAT y un router?
+Si el navegador en CLIENTE solicita una página al servidor 225.10.2.150 por el puerto 1345, como CLIENTE no tiene acceso por red al host 225.10.2.150, mandará el mensaje por la ruta de defecto a SERVIDOR. Si SERVIDOR tiene habilitado el servicio de enmascaramiento, sustituirá la dirección IP de CLIENTE por la suya propia en la interfaz WAN (213.97.2.12) y el número de puerto por otro que tenga libre, haciéndole la petición al servidor web de dirección 225.10.2.150. Cuando el servidor web le conteste, SERVIDOR sustituirá la dirección IP WAN suya (213.97.2.12) por la dirección IP propia en su red de área local (10.1.1.1) y se lo mandará a CLIENTE por el puerto por el que este se quedó esperando, en nuestro ejemplo, el 1345. De este modo, CLIENTE ha recibido sus datos transparentemente.
 
 ## Bibliografía
 
 - [Conversión de direcciones de red (NAT)](https://www.ibm.com/docs/es/i/7.2?topic=concepts-network-address-translation)
-- [NAT Dinámica](https://ccnadesdecero.es/nat-dinamica/)
-- [Configuración de NAT Dinámica](https://ccnadesdecero.es/configuracion-nat-dinamica/)
+
+- [Características de NAT](https://ccnadesdecero.es/caracteristicas-nat/)
+- [Tipos de NAT](https://ccnadesdecero.es/tipos-nat/)
+- [Ventajas y Desventajas de NAT](https://ccnadesdecero.es/ventajas-desventajas-nat/)
 - [NAT Estática](https://ccnadesdecero.es/nat-estatica/)
+- [NAT Dinámica](https://ccnadesdecero.es/nat-dinamica/)
+- [PAT](https://ccnadesdecero.es/configurar-pat/)
+
 - [Configuración de la NAT](https://ccnadesdecero.es/configuracion-nat-estatica-dinamica-pat)
 - [Configuración de NAT Estática](https://ccnadesdecero.es/configuracion-nat-estatica/)
+- [Configuración de NAT Dinámica](https://ccnadesdecero.es/configuracion-nat-dinamica/)
 - [Configuración de PAT (NAT con sobrecarga)](https://ccnadesdecero.es/configuracion-pat-nat-sobrecarga/)
+
