aspect ratio de los videos a 16/9 siempre.

--- a/_posts/2022-01-30-binario.md
+++ b/_posts/2022-01-30-binario.md
@@ -7,7 +7,7 @@ tags: [redes locales, binario, decimal]
 
 ## Binario a decimal
 
-<iframe width="100%" height="315" src="https://www.youtube.com/embed/3HRu7BvuSIQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe src="https://www.youtube.com/embed/3HRu7BvuSIQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 ## Pasar de binario a decimal
 
@@ -65,7 +65,7 @@ Con palabras de X bits podemos representar un total de 2<sup>X</sup> números, c
 
 ## Decimal a binario
 
-<iframe width="100%" height="315" src="https://www.youtube.com/embed/IpxNHH88HRU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe src="https://www.youtube.com/embed/IpxNHH88HRU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 ### Consejos para el paso de binario a decimal
 
@@ -87,9 +87,9 @@ Con palabras de X bits podemos representar un total de 2<sup>X</sup> números, c
 
 ## Binario a hexadecimal
 
-<iframe width="100%" height="315" src="https://www.youtube.com/embed/uQaLpYDCkAA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe src="https://www.youtube.com/embed/uQaLpYDCkAA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 ## Hexadecimal a binario
 
-<iframe width="100%" height="315" src="https://www.youtube.com/embed/Wx9X14aVfMg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe src="https://www.youtube.com/embed/Wx9X14aVfMg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
