--- a/_posts/2022-02-08-nat.md
+++ b/_posts/2022-02-08-nat.md
@@ -36,7 +36,7 @@ La traducción de estas direcciones de red (NAT) es un mecanismo que permite a v
 
 Para que sea posible hacer esa traducción de direcciones ha de haber un dispositivo que se encargue de hacer esa traducción en ambos sentidos que generalmente es un router, un cortafuegos o un equipo dedicado (proxy NAT).
 
-<iframe width="100%" height="315" src="https://www.youtube.com/embed/HeZWcZmrQUY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe src="https://www.youtube.com/embed/HeZWcZmrQUY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 ![Funcionamiento de un NAT](/assets/img/nat/Como-Funciona-NAT.gif)
 _Funcionamiento de un NAT_
@@ -121,7 +121,7 @@ Con PAT, se pueden asignar varias direcciones a una o más direcciones, debido a
 {:.question}
 ¿Puede usarse globalmente el mismo puerto? ¿E internamente?
 
-![Proceso de PAT](/assets/img/nat/Proceso-de-PAT.gifg)
+![Proceso de PAT](/assets/img/nat/Proceso-de-PAT.gif)
 _Proceso de PAT_
 
 A medida que el R2 procesa cada paquete, utiliza un número de puerto (1331 y 1555, en este ejemplo) para identificar el dispositivo en el que se originó el paquete. La dirección de origen (SA, source address) es la dirección local interna con el número de puerto asignado TCP / UDP agregado. La dirección de destino (DA, destination address) es la dirección global externa con el número de puerto de servicio agregado. En este ejemplo, el puerto de servicio es 80, que es HTTP.
