--- a/_posts/2022-02-08-nat.md
+++ b/_posts/2022-02-08-nat.md
@@ -36,8 +36,6 @@ La traducción de estas direcciones de red (NAT) es un mecanismo que permite a v
 
 Para que sea posible hacer esa traducción de direcciones ha de haber un dispositivo que se encargue de hacer esa traducción en ambos sentidos que generalmente es un router, un cortafuegos o un equipo dedicado (proxy NAT).
 
-<iframe src="https://www.youtube.com/embed/HeZWcZmrQUY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
 ![Funcionamiento de un NAT](/assets/img/nat/Como-Funciona-NAT.gif)
 _Funcionamiento de un NAT_
 
@@ -101,6 +99,8 @@ _NAT Estático_
 
 ⚠️ La NAT estática requiere que haya suficientes direcciones públicas disponibles para satisfacer la cantidad total de sesiones de usuario simultáneas.
 
+<iframe src="https://www.youtube.com/embed/dV9jK4g1uyw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
 {:.subsection}
 ### NAT dinámico
 
@@ -110,6 +110,8 @@ En la figura, PC3 ha accedido a Internet utilizando la primera dirección dispon
 
 ![NAT Estático](/assets/img/nat/NAT-Dinamica.png)
 _NAT dinámico_
+
+<iframe src="https://www.youtube.com/embed/rge-SwOx6Dg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 {:.subsection}
 ### PAT
@@ -131,6 +133,10 @@ A medida que el R2 procesa cada paquete, utiliza un número de puerto (1331 y 15
 
 {:.question}
 ¿Es lo mismo PAT que NAT con sobrecarga?
+
+<iframe src="https://www.youtube.com/embed/HeZWcZmrQUY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<iframe src="https://www.youtube.com/embed/I6MLqzfy6BI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 {:.subsubsection}
 #### Siguiente puerto disponible
@@ -158,16 +164,9 @@ Si el navegador en CLIENTE solicita una página al servidor 225.10.2.150 por el 
 ## Bibliografía
 
 - [Conversión de direcciones de red (NAT)](https://www.ibm.com/docs/es/i/7.2?topic=concepts-network-address-translation)
-
 - [Características de NAT](https://ccnadesdecero.es/caracteristicas-nat/)
 - [Tipos de NAT](https://ccnadesdecero.es/tipos-nat/)
 - [Ventajas y Desventajas de NAT](https://ccnadesdecero.es/ventajas-desventajas-nat/)
 - [NAT Estática](https://ccnadesdecero.es/nat-estatica/)
 - [NAT Dinámica](https://ccnadesdecero.es/nat-dinamica/)
 - [PAT](https://ccnadesdecero.es/configurar-pat/)
-
-- [Configuración de la NAT](https://ccnadesdecero.es/configuracion-nat-estatica-dinamica-pat)
-- [Configuración de NAT Estática](https://ccnadesdecero.es/configuracion-nat-estatica/)
-- [Configuración de NAT Dinámica](https://ccnadesdecero.es/configuracion-nat-dinamica/)
-- [Configuración de PAT (NAT con sobrecarga)](https://ccnadesdecero.es/configuracion-pat-nat-sobrecarga/)
-
