añado videos explicativos

--- a/_posts/2022-01-22-subredes.md
+++ b/_posts/2022-01-22-subredes.md
@@ -15,7 +15,7 @@ En redes de computadoras, una subred es un rango de direcciones lógicas. Cuando
 ## Ventajas de hacer subredes
 
 - **Reduce el tamaño de las tablas de enrutamiento:** Las tablas de enrutamiento son documentos que almacenan las rutas a los diferentes nodos en una red informática. Estas tablas se usan para encontrar la dirección del siguiente nodo al que se debe enviar un mensaje.
-- **Evita difusiones innecesarias:** Muchos programas envian mensajes broadcast (o difusiones). En redes de menos de 50 equipos esto puede no ser un problema, sin embargo, en organizaciones con cientos o miles de equipos, esto puede hacer más lenta la red.
+- **Evita difusiones innecesarias:** Muchos programas envían mensajes broadcast (o difusiones). En redes de menos de 50 equipos esto puede no ser un problema, sin embargo, en organizaciones con cientos o miles de equipos, esto puede hacer más lenta la red.
 - **Aumenta las opciones de seguridad:** La separación en subredes hace que podamos implementar medidas de seguridad como firewalls. Por ejemplo, éstos pueden ser configurados para asegurar que sólo los nodos y otras subredes autorizadas tengan acceso a estos servidores, así como a otras redes.
 - **Simplifica la administración:** Normalmente, una organización tiene diferentes departamentos que requieren acceso a diferentes tipos de recursos. Si los departamentos de contabilidad y limpieza se encuentran en la misma subred, por ejemplo, entonces las restricciones de acceso tienen que ser controladas en base de nodo-a-nodo. Pero cuando los dos departamentos se colocan en subredes separadas, entonces las opciones de seguridad se pueden aplicar sobre la base de esas subredes.
 - **Controla el crecimiento:** Al planificar una red, puedes controlar el número de máscaras de subred disponibles y cuántos nodos estarán disponibles para cada subred. Por ejemplo, 192.168.1.0, con una máscara de subred 255.255.255.0, permite que ocho bits se utilicen para definir los nodos (2<sup>8</sup> = 256, menos las direcciones de red y difusión, para un total de 254 nodos posibles), pero proporciona más 16 millones de redes (2<sup>24</sup>). Una máscara de subred 255.255.0.0, sin embargo, permitiría más de 65.000 redes y nodos cada una. Con un poco de planificación, los administradores pueden escalar sus subredes de manera que coincidan con el número de redes previstas para el número de nodos esperados en cada subred.
@@ -40,7 +40,7 @@ Y así sucesivamente; de cada subred a la siguiente, el último byte aumenta en 
 
 ## Direcciones reservadas
 
-- Dentro de cada subred (como también en la red original, sin subdivisión) no se puede asignar la primera y la última dirección aningún host. La primera dirección de la subred se utiliza como dirección de la subred, mientras que la última está reservada paradominios de difusión (broadcast) locales (dentro de la subred).
+- Dentro de cada subred (como también en la red original, sin subdivisión) no se puede asignar la primera y la última dirección a ningún host. La primera dirección de la subred se utiliza como dirección de la subred, mientras que la última está reservada para dominios de difusión (broadcast) locales (dentro de la subred).
 - Norma RFC 950 (en desuso): no se puede utilizar la primera y la última subred. Actualmente no se utiliza por la escasez de direcciones IP.
 
 ### Con RFC 950
@@ -77,8 +77,15 @@ Y así sucesivamente; de cada subred a la siguiente, el último byte aumenta en 
 No es recomendable usar la 1ª y la última subred como indica la norma RFC actualmente en desuso.
 
 - La 1ª subred no se usa ya que las dirección de red de esta subred coincide con la dirección de red de la red original.
-- La última subred no se usa ya que la direcciónd e broadcast de esta subrec coincide con la dirección de broadcast de la red original.
+- La última subred no se usa ya que la dirección de broadcast de esta subred coincide con la dirección de broadcast de la red original.
 
+## Videos de refuerzo
+
+<iframe src="https://www.youtube.com/embed/vPYP9MNeZpw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<iframe src="https://www.youtube.com/embed/rg8RwcQyPfs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<iframe src="https://www.youtube.com/embed/f9J-GheDXl4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 ## Bibliografía
 
