--- a/_posts/2022-01-30-binario.md
+++ b/_posts/2022-01-30-binario.md
@@ -93,3 +93,6 @@ Con palabras de X bits podemos representar un total de 2<sup>X</sup> números, c
 
 <iframe src="https://www.youtube.com/embed/Wx9X14aVfMg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
+## Bibliografía
+
+- [Direcciones IPv6 – Convenciones y Formatos(https://ccnadesdecero.com/curso/ipv6-formatos-acortar-expandir/)
