modelo osi vs tcp wip

--- a/_posts/2022-01-30-binario.md
+++ b/_posts/2022-01-30-binario.md
@@ -5,13 +5,13 @@ categories: [Sistemas Microinformáticos y Redes, Redes Locales]
 tags: [redes locales, binario, decimal]
 ---
 
-## Binario a decimal
+## 1. Binario a decimal
 
 <iframe src="https://www.youtube.com/embed/3HRu7BvuSIQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-## Pasar de binario a decimal
+## 2. Pasar de binario a decimal
 
-### Números de 1 bit
+### 2.1. Números de 1 bit
 
 | 2<sup>0</sup> |  |
 | 1 | Decimal |
@@ -21,7 +21,7 @@ tags: [redes locales, binario, decimal]
 
 Como podemos observar, con palabras de 1 bit podemos representar un total de 2<sup>1</sup> (2) números, cuyo rango va de 0 a 1.
 
-### Núemeros de 2 bits
+### 2.2. Núemeros de 2 bits
 
 | 2<sup>1</sup> | 2<sup>0</sup> |  |
 | 2 | 1 | Decimal |
@@ -33,7 +33,7 @@ Como podemos observar, con palabras de 1 bit podemos representar un total de 2<s
 
 Como podemos observar, con palabras de 2 bits podemos representar un total de 2<sup>2</sup> (4) número, cuyo rango va de 0 a 3.
 
-### Números de 3 bits
+### 2.3. Números de 3 bits
 
 | 2<sup>2</sup> | 2<sup>1</sup> | 2<sup>0</sup> |  |
 | 4 | 2 | 1 | Decimal |
@@ -49,7 +49,7 @@ Como podemos observar, con palabras de 2 bits podemos representar un total de 2<
 
 Como podemos observar, con palabras de 3 bits podemos representar un total de 2<sup>3</sup> (8) números, cuyo rango va de 0 a 7.
 
-### Números de 8 bits (octetos)
+### 2.4. Números de 8 bits (octetos)
 
 |   | 2<sup>7</sup> | 2<sup>6</sup> | 2<sup>5</sup> | 2<sup>4</sup> | 2<sup>3</sup> | 2<sup>2</sup> | 2<sup>1</sup> | 2<sup>0</sup> |   |
 |   | 128 | 64 | 32 | 16 | 8 | 4 | 2 | 1 | Suma |
@@ -59,22 +59,22 @@ Como podemos observar, con palabras de 3 bits podemos representar un total de 2<
 
 Como podemos observar, con palabras de 8 bit podemos representar un total de 2<sup>8</sup> (256) números, cuyo rango va de 0 a 255.
 
-### Números de X bits
+### 2.5. Números de X bits
 
 Con palabras de X bits podemos representar un total de 2<sup>X</sup> números, cuyo rango va de 0 a 2<sup>X</sup>-1.
 
-## Decimal a binario
+## 3. Decimal a binario
 
 <iframe src="https://www.youtube.com/embed/IpxNHH88HRU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-### Consejos para el paso de binario a decimal
+### 3.1. Consejos para el paso de binario a decimal
 
 - Si el bit de menor peso vale 1 nos encontraremos ante un número impar.
 - Si añadimos ceros por la izquierda a un número binario, el número no cambia.
 - Si añadimos ceros por la derecha a un número binario lo estamos multiplicando por dos.
 - Si el número que es todo unos, una forma rápida de calcular su valor es calcular el siguiente número y restarle uno a posteriori. Es decir, si tengo que obtener el valor de 111111, puedo calcular el valor de 1000000 que es 64 y restarle uno obteniendo que (111111)<sub>2</sub> = (63)<sub>10</sub>.
 
-### Números de 8 bits (octetos)
+### 3.2. Números de 8 bits (octetos)
 
 |   | 2<sup>7</sup> | 2<sup>6</sup> | 2<sup>5</sup> | 2<sup>4</sup> | 2<sup>3</sup> | 2<sup>2</sup> | 2<sup>1</sup> | 2<sup>0</sup> |   |
 |   | 128 | 64 | 32 | 16 | 8 | 4 | 2 | 1 | Suma |
@@ -85,14 +85,42 @@ Con palabras de X bits podemos representar un total de 2<sup>X</sup> números, c
 {:.question}
 ¿Se puede representar el número 315 con palabras de 8 bits? ¿Qué ocurre?
 
-## Binario a hexadecimal
+
+### 3.3. Binario a hexadecimal
 
 <iframe src="https://www.youtube.com/embed/uQaLpYDCkAA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-## Hexadecimal a binario
+{:.question}
+¿Qué significa (111)<sub>2</sub>?
+
+{:.question}
+¿Es posible este número :(2)<sub>2</sub>?
+
+
+### 3.4. Hexadecimal a binario
+
+Los valores alfanuméricos en hexadecimal son 16: 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, A, B, C, D, E, F.
+
+| Hexadecimal | Binario | Hexadecimal | Binario |
+|:---:|:------:|:---:|:------:|
+| 0   | 0000   | 8   | 1000   |
+| 1   | 0001   | 9   | 1001   |
+| 2   | 0010   | A   | 1010   |
+| 3   | 0011   | B   | 1011   |
+| 4   | 0100   | C   | 1100   |
+| 5   | 0101   | D   | 1101   |
+| 6   | 0110   | E   | 1110   |
+| 7   | 0111   | F   | 1111   |
+
 
 <iframe src="https://www.youtube.com/embed/Wx9X14aVfMg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-## Bibliografía
+{:.question}
+¿Cuáles son todos los símbolos del hexadecimal?
+
+{:.question}
+¿Cuanto es (10)<sub>16</sub> en base 10? ¿Y (10)<sub>16</sub> en decimal? ¿Y (FF)<sub>16</sub> en decimal? ¿Y (GG)<sub>16</sub> en decimal?
+
+## 4. Bibliografía
 
 - [Direcciones IPv6 – Convenciones y Formatos(https://ccnadesdecero.com/curso/ipv6-formatos-acortar-expandir/)
