ud1 redes locales finalizada.

--- a/_posts/2022-01-30-binario.md
+++ b/_posts/2022-01-30-binario.md
@@ -5,6 +5,13 @@ categories: [Sistemas Microinformáticos y Redes, Redes Locales]
 tags: [redes locales, binario, decimal]
 ---
 
+{:.question}
+¿Porqué los seres humanos usamos el sistema decimal?
+
+{:.question}
+¿Porqué las máquinas usan el sistema binario?
+
+
 ## 1. Binario a decimal
 
 <iframe src="https://www.youtube.com/embed/3HRu7BvuSIQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -117,6 +124,9 @@ Los valores alfanuméricos en hexadecimal son 16: 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 
 
 {:.question}
 ¿Cuáles son todos los símbolos del hexadecimal?
+
+{:.question}
+¿De cuántos dígitos en binario está compuesto un símbolo hexadecimal?
 
 {:.question}
 ¿Cuanto es (10)<sub>16</sub> en base 10? ¿Y (10)<sub>16</sub> en decimal? ¿Y (FF)<sub>16</sub> en decimal? ¿Y (GG)<sub>16</sub> en decimal?
