--- a/_posts/2022-01-22-subredes.md
+++ b/_posts/2022-01-22-subredes.md
@@ -79,6 +79,27 @@ No es recomendable usar la 1ª y la última subred como indica la norma RFC actu
 - La 1ª subred no se usa ya que las dirección de red de esta subred coincide con la dirección de red de la red original.
 - La última subred no se usa ya que la dirección de broadcast de esta subred coincide con la dirección de broadcast de la red original.
 
+{:.question}
+## Actividad
+
+Si tenemos una red de tipo C 194.168.100.0:
+1. ¿Qué máscara que hay que aplicarle para dividirla en 16 subredes?
+1. ¿Cuántos nodos podrán contener cada una de esas 16 subredes?
+1. ¿Cuáles serían los nombres de las subredes?
+1. ¿Cuál sería la dirección IP del nodo con identificador 4 de cada una de estas subredes?
+1. ¿A qué subred pertenece el nodo cuya dirección IP es la 194.168.100.107?
+
+{:.question}
+## Actividad
+
+La empresa X necesita crear 25 redes, el proveedor de Internet le dio la IP 192.168.9.0.
+
+1. Dar Máscara de subred Default
+1. Dar Máscara de subred Subneteada
+1. Dar Dirección de PCs en la 1ra, 2da, 3ra y 4ta.
+1. Dar dirección del router en cada una de estas subredes.
+
+
 ## Videos de refuerzo
 
 <iframe src="https://www.youtube.com/embed/vPYP9MNeZpw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
