--- a/_posts/2022-01-30-binario.md
+++ b/_posts/2022-01-30-binario.md
@@ -133,4 +133,4 @@ Los valores alfanuméricos en hexadecimal son 16: 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 
 
 ## 4. Bibliografía
 
-- [Direcciones IPv6 – Convenciones y Formatos(https://ccnadesdecero.com/curso/ipv6-formatos-acortar-expandir/)
+- [Direcciones IPv6 – Convenciones y Formatos](https://ccnadesdecero.com/curso/ipv6-formatos-acortar-expandir/)
