--- a/_posts/2022-01-30-binario.md
+++ b/_posts/2022-01-30-binario.md
@@ -5,11 +5,26 @@ categories: [Sistemas Microinformáticos y Redes, Redes Locales]
 tags: [redes locales, binario, decimal]
 ---
 
-{:.question}
-¿Porqué los seres humanos usamos el sistema decimal?
 
-{:.question}
-¿Porqué las máquinas usan el sistema binario?
+<details class="card mb-2">
+  <summary class="card-header question">¿Porqué los seres humanos usamos el sistema decimal?</summary>
+  <div class="card-body" markdown="1">
+
+Porque tenemos 10 dedos
+
+  </div>
+</details>
+
+<details class="card mb-2">
+  <summary class="card-header question">¿Porqué las máquinas usan el sistema binario?</summary>
+  <div class="card-body" markdown="1">
+
+El motivo por el cual los ordenadores trabajan en binario, es por el hecho que a la hora de construir una unidad de ejecución que pueda sumar o multiplicar números es mucho más fácil hacerlo de manera binaría que con una base más compleja.
+
+Más información [aquí](https://blog.educacionit.com/2018/12/17/que-son-los-numeros-binarios-y-por-que-los-usan-las-computadoras/).
+
+  </div>
+</details>
 
 
 ## 1. Binario a decimal
@@ -97,11 +112,25 @@ Con palabras de X bits podemos representar un total de 2<sup>X</sup> números, c
 
 <iframe src="https://www.youtube.com/embed/uQaLpYDCkAA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-{:.question}
-¿Qué significa (111)<sub>2</sub>?
 
-{:.question}
-¿Es posible este número :(2)<sub>2</sub>?
+<details class="card mb-2">
+  <summary class="card-header question">¿Qué significa (111)<sub>2</sub>?</summary>
+  <div class="card-body" markdown="1">
+
+(111)<sub>2</sub> = (7)<sub>10</sub>
+
+  </div>
+</details>
+
+
+<details class="card mb-2">
+  <summary class="card-header question">¿Es posible este número :(2)<sub>2</sub>?</summary>
+  <div class="card-body" markdown="1">
+
+No. En base 2 (binario) solo hay dos dígitos, el 0 y el 1. ¡Empezamos a contar desde el 0!
+
+  </div>
+</details>
 
 
 ### 3.4. Hexadecimal a binario
@@ -122,14 +151,28 @@ Los valores alfanuméricos en hexadecimal son 16: 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 
 
 <iframe src="https://www.youtube.com/embed/Wx9X14aVfMg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-{:.question}
-¿Cuáles son todos los símbolos del hexadecimal?
 
-{:.question}
-¿De cuántos dígitos en binario está compuesto un símbolo hexadecimal?
+<details class="card mb-2">
+  <summary class="card-header question">¿Cuáles son todos los símbolos del hexadecimal?</summary>
+  <div class="card-body" markdown="1">
+
+0, 1, 2, 3, 4, 5, 6, 7, 8, 9, a, b, c, d, e, f
+
+  </div>
+</details>
+
+<details class="card mb-2">
+  <summary class="card-header question">¿De cuántos dígitos en binario está compuesto un símbolo hexadecimal?</summary>
+  <div class="card-body" markdown="1">
+
+Habría que responder a la pregunta, ¿Cuántos dígitos en binario necesito para contar hasta el 15 (16-1)?
+
+  </div>
+</details>
 
 {:.question}
 ¿Cuanto es (10)<sub>16</sub> en base 10? ¿Y (10)<sub>16</sub> en decimal? ¿Y (FF)<sub>16</sub> en decimal? ¿Y (GG)<sub>16</sub> en decimal?
+
 
 ## 4. Bibliografía
 
