WIP conceptos básicos de ciberseguridad

--- a/_posts/2022-01-30-binario.md
+++ b/_posts/2022-01-30-binario.md
@@ -21,7 +21,7 @@ Porque tenemos 10 dedos
 
 El motivo por el cual los ordenadores trabajan en binario, es por el hecho que a la hora de construir una unidad de ejecución que pueda sumar o multiplicar números es mucho más fácil hacerlo de manera binaría que con una base más compleja.
 
-Más información [aquí](https://blog.educacionit.com/2018/12/17/que-son-los-numeros-binarios-y-por-que-los-usan-las-computadoras/).
+Más información el artículo [¿Qué son los números binarios y por qué los usan las computadoras?](https://blog.educacionit.com/2018/12/17/que-son-los-numeros-binarios-y-por-que-los-usan-las-computadoras/).
 
   </div>
 </details>
