--- a/_posts/2022-05-20-redes-locales-21-22.md
+++ b/_posts/2022-05-20-redes-locales-21-22.md
@@ -1,5 +1,5 @@
 ---
-title: Redes Locales
+title: Redes Locales 21 22
 date: 2022-05-20 23:40:00 +0100
 categories: [Sistemas Microinformáticos y Redes, Redes Locales]
 tags: [redes locales]
