arreglo el enlace que daba problemas

--- a/_posts/2022-09-19-html.md
+++ b/_posts/2022-09-19-html.md
@@ -60,7 +60,7 @@ _Nomenclatura HTML_
 ¿Para que sirve el atributo alt o texto alternativo?
 
 {:.question}
-Veamos el código fuente de [www.muylinux.com](www.muylinux.com). ¿Tiene la estructura que he explicado?
+Veamos el código fuente de esta página web. ¿Tiene la estructura que he explicado?
 
 <details class="card mb-2">
   <summary class="card-header question">¿Qué es un lenguaje de programación?</summary>
