--- a/_posts/2022-09-19-html.md
+++ b/_posts/2022-09-19-html.md
@@ -94,3 +94,4 @@ HTML ("Hypertext Markup Language") no es un lenguaje de programación. Es un len
 
 - [HTML: Lenguaje de etiquetas de hipertexto](https://developer.mozilla.org/es/docs/Web/HTML)
 - [HTML Tutorial](https://www.w3schools.com/html/)
+- [HTML: Lenguaje de etiquetas de hipertexto](https://developer.mozilla.org/es/docs/Web/HTML)
