informandome sobre token ring y red en anillo

--- a/_posts/2022-01-30-binario.md
+++ b/_posts/2022-01-30-binario.md
@@ -5,6 +5,7 @@ categories: [Sistemas Microinformáticos y Redes, Redes Locales]
 tags: [redes locales, binario, decimal]
 ---
 
+Existen 10 tipos de personas... las que saben binario y las que no. 
 
 <details class="card mb-2">
   <summary class="card-header question">¿Porqué los seres humanos usamos el sistema decimal?</summary>
