--- a/_posts/2022-05-20-redes-locales-21-22.md
+++ b/_posts/2022-05-20-redes-locales-21-22.md
@@ -17,7 +17,7 @@ tags: [redes locales]
 
 - [Binario](/posts/binario/)
 
-- UD 1 - [Caracterización de una LAN](/posts/caracterizacion-de-una-lan/)
+- UD 1 - [Introducción a las redes locales](/posts/introduccion-redes-locales/)
   - [Clasificación de redes](/posts/clasificacion-de-redes/)
   - [Modelos de red: OSI vs TCP/IP](/posts/modelos-red-osi-vs-tcp-ip/)
 - UD 2 - [Instalación física de una red](/posts/instalacion-fisica-de-una-red/) ➡️ CAPA FÍSICA
