añado práctica de criptografía clásica

--- a/_posts/2022-09-25-redes-locales-22-23.md
+++ b/_posts/2022-09-25-redes-locales-22-23.md
@@ -23,7 +23,8 @@ pin: true
 - UD07 - Capa de red
 - UD08 - [Dispositivos de interconexión](/posts/dispositivos-especificos-de-la-red-local/)
 
-- P01 - Práctica: Binario (en papel)
-- P02 - [Práctica: Introducción a las redes locales](/posts/practica-introduccion-redes-locales/)
+- P01 - Práctica: Binario (en papel) ➡ Entrega en papel
+- P02 - [Práctica: Introducción a las redes locales](/posts/practica-introduccion-redes-locales/) ➡ Entrega en papel
+- P03 - Práctica: Modelo de red OSI y TCP/IP
 
 
